# transvoice

./: .env  .gitignore  CLAUDE.md  README.md  deploy_checklist.md  docker-compose.prod.yml  docker-compose.yml  env.example  完整提示词：FreeSWITCH+VibeVoiceASR+VibeVoiceTTS+通义千问3.6 多业务智能外呼系统.md
.omc/: .project-memory.json.tmp.79c5c81f-7a44-465e-aa57-aceb148a48af  project-memory.json
.omc/sessions/: 130f0154-33a5-4171-b171-430ca084f48e.json  716da7e0-f89b-4c56-bd03-0d9afd760fe1.json  e6027fe6-d327-4055-a7dd-e8b05d8597dd.json
.omc/state/: agent-replay-9fb85c18-0e8c-4d36-8e99-7135bc5a3a03.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.openflow/: state.json
agent-asr/: Dockerfile  Dockerfile.cpu  README.md  requirements.txt
agent-asr/adapter/: base.py  config.py  config.yaml  main.py
agent-asr/asradapter/: base.py  config.py  grpc_server.py  main.py  requirements.txt  ws_server.py
agent-asr/asrengine/: README.md  server.py
agent-asr/deploy/: sensevoice-asr.service  vibevoice-asr.service
agent-asr/tests/: test_base.py  test_main.py  test_storage.py
agent-flow/: .env  Dockerfile  README.md  main.py  requirements.txt
agent-flow/alembic/: env.py
agent-flow/llm/: Dockerfile
agent-flow/src/: config.py
agent-flow/tests/: test_graph_flow.py  test_main.py  (+3 more)
agent-orchestrator/: .dockerignore  Dockerfile  alembic.ini  compliance.py  config.py  event_handlers.py  fs_actions.py  fs_esl.py  graph_flow.py  llm_base.py  main.py  requirements.txt
agent-tts/: Dockerfile  Dockerfile.cpu  README.md  server.py
assert/: deepseek_mermaid_20260513_8759a6.mermaid  deepseek_mermaid_20260513_91d593.mermaid
deploy/: init_db.sql  install_all.sh  install_deps.sh  install_fs.sh  install_unimrcp.sh
freeswitch/: event_socket.conf.xml  modules.conf  unimrcp.conf.xml  vars.xml
freeswitch/mod_audio_fork/: BUILD.md  CMakeLists-ubantu.txt  CMakeLists.txt  README.md  audio_pipe.cpp  build-ubantu.sh  build.sh  lws_glue.cpp  mod_audio_fork.c  mod_audio_fork.h  vector_math.cpp
mrcp-asr/: requirements.txt
mrcp-tts/: README.md
orchestrator/: event_handling_spec.md
qwen3.5-9b/: README.md
scripts/: deploy.sh  dev.sh  local.sh  ollama.sh  prod.sh  vllm.sh
unimrcp/: unimrcpserver.xml
vibevoice-asr/: README.md
(+134 files in other folders)
